# textmate-grammar-python

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  element.html  example.py  genindex.html  index.html  languages.html  objects.inv  py-modindex.html  pyproject.toml  readthedocs.yaml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  started.html  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml  docs.yml  release.yml  test_main.yml  tests_on_main.yml
_downloads/1a4f80c19cefb4f346c42c68da6fff8e/: example.py
_modules/: index.html
_modules/textmate_grammar/: elements.html  handler.html  language.html  parser.html
_modules/textmate_grammar/parsers/: base.html  markdown.html  matlab.html
_modules/textmate_grammar/utils/: cache.html  exceptions.html  handler.html  logger.html
_sources/: element.md.txt  languages.md.txt
_sources/apidocs/textmate_grammar/: textmate_grammar.elements.rst.txt  textmate_grammar.grammars.matlab.rst.txt  textmate_grammar.handler.rst.txt  textmate_grammar.language.rst.txt  textmate_grammar.parser.rst.txt  textmate_grammar.parsers.base.rst.txt  textmate_grammar.parsers.markdown.rst.txt  textmate_grammar.parsers.matlab.rst.txt  textmate_grammar.parsers.rst.txt  textmate_grammar.rst.txt  textmate_grammar.utils.cache.rst.txt  textmate_grammar.utils.exceptions.rst.txt  textmate_grammar.utils.handler.rst.txt  textmate_grammar.utils.logger.rst.txt  textmate_grammar.utils.rst.txt
apidocs/: index.html
apidocs/textmate_grammar/: textmate_grammar.elements.html  textmate_grammar.grammars.html  textmate_grammar.grammars.markdown.html  textmate_grammar.grammars.matlab.html  textmate_grammar.handler.html  textmate_grammar.html  textmate_grammar.language.html  textmate_grammar.parser.html  textmate_grammar.parsers.base.html  textmate_grammar.parsers.html  textmate_grammar.parsers.markdown.html  textmate_grammar.parsers.matlab.html  textmate_grammar.utils.cache.html  textmate_grammar.utils.exceptions.html  textmate_grammar.utils.handler.html  textmate_grammar.utils.html  textmate_grammar.utils.logger.html
docs/: conf.py  element.md  index.md  requirements.txt  started.md
docs/apidocs/: index.rst
docs/apidocs/textmate_grammar/: textmate_grammar.cache.rst  textmate_grammar.elements.rst  textmate_grammar.exceptions.rst  textmate_grammar.grammars.markdown.rst  textmate_grammar.grammars.rst  textmate_grammar.handler.rst  textmate_grammar.language.rst  textmate_grammar.logger.rst  textmate_grammar.parser.rst  textmate_grammar.rst
source/: update_tmlanguage.py
sphinx-matlab/: main.py
sphinx-matlab/parser/: __init__.py  elements.py  main.py  parsers.py
sphinx-matlab/tmlanguage/: version.txt
sphinx_matlab/: main.py
sphinx_matlab/grammar/: __init__.py  elements.py  exceptions.py  main.py  parser.py  parsers.py
sphinx_matlab/parser/: __init__.py  exceptions.py  main.py  parsers.py
sphinx_matlab/tmlanguage/: .gitignore  MATLAB.tmLanguage  MATLAB.tmLanguage.json  __init__.py
src/textmate_grammar/: cache.py  elements.py  exceptions.py  handler.py  language.py  logger.py  parser.py
src/textmate_grammar/grammars/: __init__.py
src/textmate_grammar/grammars/markdown/: __init__.py
src/textmate_grammar/grammars/matlab/: __init__.py  license.txt
src/textmate_grammar/parsers/: base.py
src/textmate_grammar/parsers/markdown/: __init__.py
src/textmate_grammar/parsers/matlab/: __init__.py  grammar.yaml
src/textmate_grammar/utils/: cache.py  exceptions.py  handler.py  logger.py
test/docker-npm/: Dockerfile  README.md
test/docker-npm/src/: entrypoint.sh  index.js  install.sh
test/grammar/file/: test.py
test/grammar/unit/: __init__.py  test_anonymous_function.py  test_comment.py  test_constants.py  test_control_statement.py  test_global_persistent.py  test_imports.py  test_line_continuation.py  test_numbers.py  test_operators.py  test_punctuation.py  test_readwrite_operations.py  test_string.py  test_transpose.py  test_validators.py  test_variables.py
test/nodejs/: .gitignore  test_regression.py  testrunner.py
test/nodejs/src/: index.js  install.sh
test/regression/: __init__.py  install.sh  readme.md  simple.m  test_matlab.py  test_regression.py
test/regression/matlab/: test_matlab.py
test/regression/matlab/src/: test_multiple_inheritance_ml.m
test/unit/: __init__.py  comment.py
test/unit/matlab/: __init__.py  conftest.py  test_anonymous_function.py  test_comment.py  test_constants.py  test_control_statement.py  test_global_persistent.py  test_imports.py  test_line_continuation.py  test_numbers.py  test_operators.py  test_pre_processor.py  test_punctuation.py  test_readwrite_operations.py  test_string.py  test_transpose.py  test_validators.py  test_variables.py
textmate_grammar/: __init__.py  captures.py  elements.py  exceptions.py  handler.py  language.py  logger.py  logging.py  parser.py  read.py  search.py  stream.py
textmate_grammar/grammars/markdown/: __init__.py
textmate_grammar/grammars/matlab/: __init__.py  grammar.yaml
