##################################### poetry ##################################### 
[tool.poetry]
name = "textmate-grammar-python"
version = "0.1.2"
description = "An interpreter for grammar files as defined by TextMate and used in VSCode, implemented in Python. TextMate grammars use the oniguruma dialect (https://github.com/kkos/oniguruma). Supports loading grammar files from JSON, PLIST, or YAML format."
authors = ["Mark Shui Hu <watermarkhu@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/watermarkhu/textmate-grammar-python"
keywords = ["textmate", "tokenization"]
packages = [{include = "textmate_grammar"}]

[tool.poetry.dependencies]
python = "^3.11"
onigurumacffi = "^1.3.0"
PyYAML = "^6.0.1"

[tool.poetry.group.test.dependencies]
pytest = ">=7.3.1,<9.0.0"
pytest-icdiff = ">=0.8,<0.10"
tox = "^4.11.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
mypy = "^1.8.0"
types-pyyaml = "^6.0.12.12"



##################################### ruff ##################################### 
ruff = "^0.2.1"
[tool.ruff]
include = ["pyproject.toml", "textmate_grammar/**/*.py"]
exclude = ["textmate_grammar/grammars/"]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E111", "E114", "E117", "E501", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

##################################### mypy ##################################### 
[tool.mypy]
ignore_missing_imports = true
exclude = ["test/*", "example.py"]

##################################### build ##################################### 
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
